# axum-api

./: .rustfmt.toml  Cargo.toml
examples/basic/: main.rs
src/: aide_ext.rs  api_error.rs  diesel_otel.rs  extractors.rs  lib.rs  prelude.rs  scalar.rs
src/extractors/: jwt.rs  multipart.rs  path.rs  typed_multipart.rs  valid_json.rs  valid_query.rs
